# JobBot

./: .gitignore  CMakeLists.txt  DB.h  JsonParse.h  Telegram.h  VK.h  WebServer.h  main.cpp  sql_func.sql
